--- a/index.mdx
+++ b/index.mdx
@@ -30,4 +30,4 @@ This is my personal documentation repository.
 
 This documentation is a living collection of notes, workflows, and tutorials that I've written for myself and others throughout my career. The goal is to have a single place where I can reference common tasks and share knowledge with my friends, collaborators, and the broader scientific community.
 
-If you find something useful or have suggestions, please reach out at any of my socials found on [my website](https://www.ianwashere.com/)!
+If you find something useful or have suggestions, please reach out at any of my socials found on [my website](https://www.ianwashere.com/)! Found an issue with these docs? [Submit a GitHub issue](https://github.com/ianandersonlol/docs/issues).
