Fix changelog Update component to use label prop
The Mintlify Update component requires 'label' instead of 'date' for
anchor link generation. This fixes the broken #undefined links and
rendering issues on the changelog page.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -5,7 +5,7 @@ hideSidebar: true
 toc: false
 ---
 
-<Update date="2026-01-27">
+<Update label="2026-01-27">
 - Add GitHub issues link, fix A100 memory specs
 </Update>
 
