Use center mode for changelog page to hide sidebar

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -1,8 +1,7 @@
 ---
 title: Changelog
 description: Recent updates to the documentation
-hideSidebar: true
-toc: false
+mode: center
 ---
 
 <Update label="2026-01-27">
