--- a/hpc/slurm-environment-variables.mdx
+++ b/hpc/slurm-environment-variables.mdx
@@ -76,7 +76,7 @@ Process different files based on array index:
 
 ```bash
 #!/bin/bash
-#SBATCH --array=0-99
+#SBATCH --array=1-100
 
 # Method 1: Direct file naming
 INPUT_FILE="data/sample_${SLURM_ARRAY_TASK_ID}.fastq"
@@ -86,7 +86,7 @@ INPUT_FILE=$(sed -n "${SLURM_ARRAY_TASK_ID}p" file_list.txt)
 
 # Method 3: Find files dynamically
 FILES=(data/*.fastq)
-INPUT_FILE=${FILES[$SLURM_ARRAY_TASK_ID]}
+INPUT_FILE=${FILES[$((SLURM_ARRAY_TASK_ID - 1))]}
 
 echo "Processing: $INPUT_FILE"
 process_sample.py "$INPUT_FILE"
